--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Carvalho Aleixo FullStack Assessment</title>
 		<script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+		<link href="/output-styles.css" rel="stylesheet" />
 	</head>
 	<body>
 		<form id="form">
